--- a/UI/emuASM.glade
+++ b/UI/emuASM.glade
@@ -2,7 +2,7 @@
 <!-- Generated with glade 3.22.1 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
-  <object class="GtkListStore" id="liststore1">
+  <object class="GtkListStore" id="storeRegistros">
     <columns>
       <!-- column-name registro -->
       <column type="gchararray"/>
@@ -19,30 +19,6 @@
       </row>
       <row>
         <col id="0" translatable="yes">DX</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">AL</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">AH</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">BL</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">BH</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">CL</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">CH</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">DL</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">DH</col>
       </row>
     </data>
   </object>
@@ -322,7 +298,7 @@ push/pop</property>
               <object class="GtkComboBox" id="comboRegistro">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="model">liststore1</property>
+                <property name="model">storeRegistros</property>
                 <property name="active">0</property>
                 <property name="id_column">0</property>
                 <child>
